--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   },
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "npm run setup && next build",
-    "build-only": "next build",
-    "start": "next start",
-    "setup": "node ./setup.mjs"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "2.11.0",
